# Ferrari-Digital-Cluster

./: CMakeLists.txt  Gauge.qml  IconStatusRow.qml  Main.qml  NavigationLayout.qml  README.md  StandardLayout.qml  StatusRow.qml  main.cpp
CAN/: VirtualCanBus.cpp  VirtualCanBus.h
VehicleState/: VehicleState.cpp  VehicleState.h
